# crewai_conversational_chatbot

examples/: main.py
examples/crewai_chatbot/: README.md  pyproject-old.toml  pyproject.toml  requirements.txt
examples/crewai_chatbot/data/chrome_db/: chroma.sqlite3
examples/crewai_chatbot/src/crewai_chatbot/: crew.py  main.py
examples/crewai_chatbot/src/crewai_chatbot/config/: agents.yaml  tasks.yaml
examples/crewai_pair/: README.md  crewai-code-eval.py  crewai-code-generator.py  crewai-code-pair.py  crewai-code-reviewer.py  pyproject-old.toml  pyproject.toml
examples/crewai_pair/src/crewai_pair/: crew.py  main.py
examples/crewai_pair/src/crewai_pair/config/: agents.yaml  tasks.yaml
examples/crewai_pair/tools/: code_eval_tool.py  python_lint_tool.py
examples/markdown_validator/: main.py
