[project]
name = "crewai_pair"
version = "0.1.0"
description = "crewai-pair using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
]

[project.scripts]
crewai_pair = "crewai_pair.main:run"
run_crew = "crewai_pair.main:run"
train = "crewai_pair.main:train"
replay = "crewai_pair.main:replay"
test = "crewai_pair.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
